<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updatefragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/custom_dialog"
    android:elevation="100dp"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dialog"
        android:foregroundGravity="center"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        android:textAlignment="center"
        android:id="@+id/updatebox"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@color/tranparent"
            android:paddingTop="10dp"
            android:layout_marginTop="15dp"
            android:text="Update This Record"
            android:textAlignment="center"
            android:textColor="#005fd7"
            android:textColorHighlight="#CF074B"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/systolic1"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="Systolic pressure(mmHg)"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#090707" />

        <EditText
            android:id="@+id/diastolic1"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="Diastolic Pressure(mmHg)"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/bpm_in1"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="Bpm"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <EditText
                android:id="@+id/date1"
                android:layout_width="127dp"
                android:layout_height="48dp"
                android:focusable="false"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="Date"
                android:inputType="date"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/time1"
                android:layout_width="127dp"
                android:layout_height="49dp"
                android:layout_marginLeft="10dp"
                android:focusable="false"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_input"
                android:hint="Time"
                android:inputType="time"
                android:textAlignment="center" />
        </LinearLayout>


        <EditText
            android:id="@+id/comment_in1"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="Comment"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/update_btn"
            android:layout_width="242dp"
            android:layout_height="70dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="5dp"
            android:text="Update"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textColorHint="#FFFFFF"
            android:background="#005fd7"
             />

        <Button
            android:id="@+id/deletee_btn"
            android:layout_width="242dp"
            android:layout_height="70dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="50dp"
            android:text="Delete"
            android:textSize="20dp"
           android:background="#005fd7"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
             />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>