...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        >

        <EditText
            android:id="@+id/systolic"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_input"
            android:ems="10"
...
