...
                            android:id="@+id/dia_m"
                            android:layout_width="84dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:hint="80"
                            android:textAlignment="center"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="match_parent"
...
